syntax = "proto3";

option csharp_namespace = "Sowkoquiz.Grpc";
import "google/protobuf/wrappers.proto";
package search;

service SearchService {
  rpc SearchQuiz (SearchQuizRequest) returns (SearchQuizResponse);
}

message SearchQuizRequest{
  optional string searchTerm = 1;
  optional google.protobuf.Int32Value take = 2;
  optional google.protobuf.Int32Value skip = 3;
}

message SearchQuizResponse{
  repeated Quiz quiz = 1;

  message Quiz {
    int32 id = 1;
    string title = 2;
    string description = 3;
  }
}